Added new styling and information about work

--- a/assets/style.css
+++ b/assets/style.css
@@ -228,7 +228,7 @@ h3 a:hover {
 	margin-top: 3rem;
 }
 
-.work-container div {
+.work-card {
 	margin-top: 2rem;
 }
 
@@ -239,18 +239,37 @@ h3 a:hover {
 .work-container img {
 	width: 100%;
 	display: block;
-  opacity: 0.75;
-  
+	opacity: 0.75;
 }
 .work-container img:hover {
-  opacity: 0.9;
-  cursor: pointer;
+	opacity: 0.9;
+	cursor: pointer;
 }
 
-.work-container p {
+.work-card-body {
+	background: rgba(233, 179, 132, 0.25);
+	max-width: 350px;
+	margin: 0 auto;
+	padding: 0.5rem;
+	border-radius: 0 0 5px 5px;
 	font-size: 1rem;
 	text-align: center;
-	margin: 0.5rem 0;
+	line-height: 1.5rem;
+	color: #777;
+}
+
+.work-card-body a {
+	color: #777;
+	text-decoration: underline;
+}
+
+.work-card-body p {
+	margin: 0;
+}
+
+.work-card-body p:nth-child(2) {
+	font-style: italic;
+	font-size: 0.85rem;
 }
 
 .more {
@@ -303,6 +322,11 @@ footer p {
 	font-size: 1.5rem;
 	margin-bottom: 0;
 }
+
+/* .work-card {
+	border: 1px solid #dcdcdc;
+	border-radius: 3px;
+} */
 
 .about-container {
 	margin-top: 2.5rem;
@@ -369,6 +393,8 @@ footer p {
 		width: 350px;
 		height: 230px;
 		object-fit: cover;
+		margin: 0 auto;
+		/* margin-top: 0.5rem; */
 	}
 
 	.about-text {
@@ -395,12 +421,13 @@ footer p {
 		padding: 5rem 1rem;
 	}
 
-	.work-container div:first-child {
+	/* .work-container div:first-child {
 		margin-top: 2rem;
-	}
+	} */
 
 	.work-container img {
 		margin: auto;
+		margin-top: 0.5rem;
 	}
 
 	.more {
